--- a/html/review.html
+++ b/html/review.html
@@ -6,38 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review</title>
+
+    <link rel="stylesheet" href="/CSS/footer-menu.css">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="/js/main.js" defer></script>
 </head>
 
 <body>
     <div class="review_page page">
-        <div class="page__menu flexrow">
-            <div class="page__menu--logo">
-                <img src="../img/logo.png" alt="">
-            </div>
-            <div class="page__menu--ul">
-                <ul>
-                    <li><a href="./home_index.html">home</a></li>
-                    <li><a href="./tour.html">tour</a></li>
-                    <li><a href="./review.html">review</a></li>
-                    <li><a href="./aboutus.html">about us</a></li>
-                </ul>
-            </div>
-            <div class="btn btn-booknow btn-medium">
-                <a href="./booknow.html">BOOK NOW</a>
-            </div>
-            <div class="page__menu--icon flexrow">
-                <div class="btn-signin icon">
-                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
-                </div>
-                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
-            </div>
-
-            <div class="page__menu--icon-menu ">
-                <a href="#"><i class="fas fa-align-justify"></i></a>
-            </div>
-        </div>
+        <div id="page__menu"></div>
 
         <div class="page__content">
             <div class="page__content--section p1--review">
@@ -76,56 +55,7 @@
             </div>
         </div>
 
-        <div class="page__footer">
-            <div class="page__footer--left">
-                <h2 class="text-center">Travel with us</h2>
-                <img src="/img/logo.png" alt="">
-                <div class="footer-icon-contact">
-                    <a href="">
-                        <i class="fab fa-facebook footer-icon"></i>
-                    </a>
-                    <a href="">
-                        <i class="fab fa-instagram footer-icon"></i>
-                    </a>
-                    <a href="">
-                        <i class="fab fa-youtube footer-icon"></i>
-                    </a>
-                    <a href="">
-                        <i class="fas fa-envelope footer-icon"></i>
-                    </a>
-                    <a href="">
-                        <i class="fab fa-twitter footer-icon"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="page__footer--right">
-                <div class="footer--right--menu">
-                    <ul class="flexrow">
-                        <li>
-                            <a href="./aboutus.html">About us</a>
-                        </li>
-                        <li>
-                            <a href="./tour.html">Tour</a>
-                        </li>
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                        <li>
-                            <a href="./provision.html">Provision</a>
-                        </li>
-                        <li>
-                            <a href="./security.html">Security</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer--information">
-                    <p>Địa chỉ: Lầu 2, 3 và 7, Tòa nhà An Phú Plaza, 117-119 Lý Chính Thắng, Phường 7, Quận 3, Tp. Hồ Chí Minh, Việt Nam</p>
-                    <p>Là công ty du lịch trực tuyến hàng đầu Đông Nam Á, EIV đáp ứng đa dạng các nhu cầu du lịch trên cùng một nền tảng, giúp khách hàng có được những chuyến du lịch tuyệt vời với người thân yêu.</p>
-                    <p style="font-family: 'Courier New', Courier, monospace; margin-top: 30px;">The every where in Vina</p>
-                </div>
-                <p style="color: white; font-style: italic; font-size: 15px; margin-top: var(--space);">@Copyright Group6_VIA</p>
-            </div>
-        </div>
+        <div id="page__footer"></div>
     </div>
 </body>
 
