--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -19,14 +19,15 @@
         <div id="page__menu"></div>
 
         <div class="page__content">
-            <div class="page__content--content">
-                <h1>Giới thiệu về EIV</h1>
-                <h2>Thông tin chung</h2>
-                <p>Tên đầy đủ của doanh nghiệp: CÔNG TY CỔ PHẦN DU LỊCH EIV <br/> Website: <br/> Trụ sở chính: Số 669 QL1A, khu phố 3, Thủ Đức, Thành phố Hồ Chí Minh <br/> Tổng đài EIV: +999 888 777
+            <h2>Giới thiệu về EIV</h2>
+                <h3>Thông tin chung</h3>
+                <p>Tên đầy đủ của doanh nghiệp: CÔNG TY CỔ PHẦN DU LỊCH EIV <br/>
+                   Website: <br/>
+                   Trụ sở chính: Số 669 QL1A, khu phố 3, Thủ Đức, Thành phố Hồ Chí Minh <br/>
+                   Tổng đài EIV: +999 888 777
                 </p>
-                <h2>Giới thiệu về công ty EIV</h2>
-                <p>EIV được thành lập vào tháng 11/2021 với tên gọi: công ty cổ phần du lịch EIV. Công ty được thành lập có 5 nhân sự cấp cao và hoạt động chính trong lĩnh vực kinh doanh lữ hành. Với sứ mệnh phục vụ nhu cầu du lịch của khách hàng, công ty
-                    du lịch EIV luôn tự hào là nơi được nhiều khách hàng tin tưởng, lựa chọn vì đã đem đến những giá trị mới cho người dùng như:</p>
+                <h3>Giới thiệu về công ty EIV</h3>
+                <p>EIV được thành lập vào tháng 11/2021 với tên gọi: công ty cổ phần du lịch EIV. Công ty được thành lập có 5 nhân sự cấp cao và hoạt động chính trong lĩnh vực kinh doanh lữ hành. Với sứ mệnh phục vụ nhu cầu du lịch của khách hàng, công ty du lịch EIV luôn tự hào là nơi được nhiều khách hàng tin tưởng, lựa chọn vì đã đem đến những giá trị mới cho người dùng như:</p>
                 <ul>
                     <li>Thường xuyên cập nhật các điểm du lịch mới nhằm tạo nên sự hấp dẫn trong hành trình của khách hàng</li>
                     <li>Luôn sáng tạo các trò chơi vận động mới lạ, độc đáo để tạo nên giá trị khác biệt trong các tour du lịch EIV</li>
@@ -39,16 +40,14 @@
                     <li>Top 10 doanh nghiệp lữ hành nội địa hàng đầu TP HCM triển vọng trong năm 2021</li>
                     <li>Top 03 đơn vị tổ chức teambuilding nổi bật</li>
                 </ul>
-                <h2>Các sản phẩm du lịch EIV chính</h2>
+                <h3>Các sản phẩm du lịch EIV chính</h3>
                 <p>Công ty EIV hiện đang thực hiện các hoạt động kinh doanh lữ hành với đa dạng loại hình dịch vụ, sản phẩm như:</p>
                 <ul>
                     <li>Tour du lịch trong nước trải rộng khắp 3 miền tổ quốc Việt Nam.</li>
                     <li>Các hoạt động trong tour du lịch đa dạng, nhiều hoạt động hấp dẫn.</li>
                     <li>Những địa điểm thu hút đem lại cảm giác mới lạ.</li>
                 </ul>
-            </div>
         </div>
-
         <div id="page__footer"></div>
     </div>
 </body>
