--- a/html/provision.html
+++ b/html/provision.html
@@ -19,27 +19,25 @@
         <div id="page__menu"></div>
 
         <div class="page__content">
-            <div class="page__content--content">
-                <h2>Chính sách: “Đảm bảo giá tốt nhất”</h2>
+            <h4>Chính sách: “Đảm bảo giá tốt nhất”</h4>
                 <ol>
                     <li>"Đảm bảo Giá Tốt nhất" của chúng tôi chỉ áp dụng cho các đặt tour đã được xác nhận.</li>
                     <li>“Đảm bảo giá tốt nhất” không áp dụng cho các đặt chỗ cung cấp phần thưởng chương trình khách hàng thân thiết của bên thứ ba, bao gồm đổi dặm bay thường xuyên hoặc các mức giá chưa được công bố như:
-                        <ul>
+                        <ul class="page__li">
                             <li>Giá riêng</li>
                             <li>Giá đóng gói</li>
                             <li>Phòng khách sạn được bán như một phần của gói du lịch</li>
-                            <li>Các mức giá không áp dụng cho công chúng, bao gồm:</li>
+                            <li>Các mức giá không áp dụng cho công chúng</li>
                         </ul>
                     </li>
-                    <li>EIV có quyền và toàn quyền quyết định tính hợp lệ của bất kỳ yêu cầu nào, bao gồm nhưng không giới hạn, xác định rằng đó là cho cùng một tài sản, loại phòng hoặc ngày tháng và nó đáp ứng tất cả các điều khoản, điều kiện và yêu cầu
-                        xử lý khiếu nại.</li>
+                    <li>EIV có quyền và toàn quyền quyết định tính hợp lệ của bất kỳ yêu cầu nào, bao gồm nhưng không giới hạn, xác định rằng đó là cho cùng một tài sản, loại phòng hoặc ngày tháng và nó đáp ứng tất cả các điều khoản, điều kiện và yêu cầu xử lý khiếu nại.</li>
                     <li>“Đảm bảo Giá Tốt nhất” của chúng tôi không được kết hợp với các ưu đãi hoặc khuyến mãi khác.</li>
-                    <li>EIV có quyền sửa đổi, điều chỉnh, bổ sung, đình chỉ hoặc chấm dứt “Đảm bảo Giá Tốt nhất” bất cứ lúc nào.Bất kỳ câu hỏi nào liên quan đến khiếu nại phải được chuyển đến nhóm Dịch vụ Khách hàng của chúng tôi.</li>
+                    <li>EIV có quyền sửa đổi, điều chỉnh, bổ sung, đình chỉ hoặc chấm dứt “Đảm bảo Giá Tốt nhất” bất cứ lúc nào. Bất kỳ câu hỏi nào liên quan đến khiếu nại phải được chuyển đến nhóm Dịch vụ Khách hàng của chúng tôi.</li>
                 </ol>
-                <h2>Chính sách đăng ký và hủy tour:</h2>
+                <h4>Chính sách đăng ký và hủy tour:</h4>
                 <ol>
                     <li>Đối với tour có vé máy bay
-                        <ul>
+                        <ul class="page__li">
                             <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
                             <li>Đợt 2: Thanh toán tổng số tiền tour còn lại sau khi booking vé máy bay.
                                 <ul>
@@ -54,7 +52,7 @@
                         </ul>
                     </li>
                     <li>Đối với tour không có vé máy bay
-                        <ul>
+                        <ul class="page__li">
                             <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
                             <li>Đợt 2: Thanh toán tổng số tiền tour còn lại trước ngày đi 10 ngày.
                                 <ul>
@@ -69,7 +67,7 @@
                         </ul>
                     </li>
                 </ol>
-            </div>
+                <h5>Với những chính sách ở trên EIV mong rằng các bạn sẽ tận hưởng hết mức chuyến du lịch của mình. </h5>
         </div>
 
         <div id="page__footer"></div>
