--- a/html/register_phone.html
+++ b/html/register_phone.html
@@ -18,52 +18,67 @@
     <div class="register_page page">
 
         <div id="page__menu"></div>
+
         <div class="page__content">
-            <div class="form__option">
+            <div class="form__option--re">
                 <ul>
                     <div>
                         <li><a href="/html/register_email.html">Email</a></li>
                     </div>
                     <div>
-                        <li><a href="">Di động</a></li>
+                        <li><a href="" id="phone">Di động</a></li>
                     </div>
                 </ul>
+                <hr>
                 <h3>Đăng ký với Di động</h3>
-                <form action="#">
+                <form class="form__regis">
                     <div class="form_row">
-                        <label class="form__label" for="phone">Số di động</label>
-                        <input class="form__input" type="text" id="phone" placeholder="Số di động">
+                        <label class="form__label" for="name">Tên</label>
+                        <input class="form__input" type="text" id="name" name="name" placeholder="Tên" >
+                        <p id="notname"></p>
+                    </div>
+                    <div class="form_row">
+                        <label class="form__label" for="surname">Họ</label>
+                        <input class="form__input" type="text" id="surname" name="surname" placeholder="Họ" >
+                        <p id="notsurname"></p>
+                    </div>
+                    <div class="form_row">
+                        <label class="form__label" for="Phone">Số di động</label>
+                        <input class="form__input" type="text" id="Phone" name="phone" placeholder="Phone" >
+                        <p id="notphone"></p>
                     </div>
                     <div class="form_row">
                         <label class="form__label" for="pass">Mật khẩu</label>
-                        <input class="form__input" type="text" id="pass" placeholder="Mật khẩu">
+                        <input class="form__input" type="password" id="pass" name="pass" placeholder="Mật khẩu" >
+                        <p id="notpass"></p>
                     </div>
                     <div class="form_row">
                         <label class="form__label" for="repass">Xác nhận lại mật khẩu</label>
-                        <input class="form__input" type="text" id="repass" placeholder="Xác nhận lại mật khẩu">
+                        <input class="form__input" type="password" id="repass" placeholder="Xác nhận lại mật khẩu" >
+                        <p id="notrepass"></p>
                     </div>
+                    <div class="form_row accept">
+                        <input type="checkbox" value="accept" name="accept" id="accept">
+                        <h6 style="margin-top: -5px;">Chấp nhận điều khoản sử dụng của công ty.</h6> 
+                    </div>
+                    <p id="notaccept"></p>
                     <div class="form_row">
-                        <input type="checkbox" value="accept" name="accept" class="accept"> Chấp nhận điều khoản sử dụng của công ty.
-                    </div>
-                    <div class="form_row verify">
-                        <input class="form__button" type="submit" name="submit" value="Đăng ký">
-                    </div>
-                    <p>hoặc tiếp tục với</p>
-                    <div class="link__other">
-                        <div class="GG__link">
-                            <a href="">
-                                <img src="/img/Detail/GGLogo.png" alt="">
-                                <p>Google</p>
-                            </a>
-                        </div>
-                        <div class="FB__link">
-                            <a href="">
-                                <img src="/img/Detail/FBLogo.png" alt="">
-                                <p>Facebook</p>
-                            </a>
-                        </div>
+                        <input class="form__button" type="button" name="submit" value="Đăng ký" onclick="chuyenTrang()" onmouseenter="checkRegisPhone()">
                     </div>
                 </form>
+                <p id="match">hoặc tiếp tục với</p>
+                <ul class="other_method">
+                    <div>
+                        <li><a href="" id="gg">
+                            <img src="/img/Detail/GGLogo.png" alt=""><p>Google</p>
+                        </a></li>
+                    </div>
+                    <div>
+                        <li><a href="" id="fb">
+                            <img src="/img/Detail/FBLogo.png" alt=""><p>Facebook</p>
+                        </a></li>
+                    </div>
+                </ul>
             </div>
         </div>
 
