--- a/html/tour.html
+++ b/html/tour.html
@@ -19,7 +19,7 @@
         <div id="page__menu"></div>
 
         <div class="page__content content">
-            <h2 class="title">OUR TOURS</h2>
+            <h2 class="title title--header">OUR TOURS</h2>
             <div class="page__content--tour">
                 <div class="tour--item">
                     <div class="tour--item-pic">
