--- a/html/review_sample.html
+++ b/html/review_sample.html
@@ -6,32 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="/CSS/footer-menu.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
-
 <body>
-    <!--<div id="SaPa">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, esse. Quisquam quidem illo asperiores quis odio cumque placeat expedita doloremque ducimus! Nisi cupiditate dolorum quo impedit ipsa dolores veniam reiciendis!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi non totam fuga dolore eligendi illum qui? Dolores ea nulla quo, doloribus ipsam quia. Adipisci, asperiores similique! Odio, alias nobis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aspernatur iure laudantium vero. Quidem, ut assumenda? Voluptatum, quod cupiditate labore aliquid dolorum tempore ea enim iusto, esse, quo expedita earum.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt non ea nisi consequuntur dicta ducimus animi itaque vitae inventore, voluptatem ullam assumenda molestiae sunt facilis veritatis quae modi officia eveniet!</p>
-    </div>
-    <div id="PhuYen">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure voluptates distinctio, quas nulla facilis iusto laborum ipsam molestias! Suscipit temporibus quos distinctio beatae libero ullam nemo earum dicta quo non?</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus tenetur labore et laboriosam ducimus, fugit ex ullam, quo ratione obcaecati soluta sunt perferendis provident veritatis vero voluptas rerum, laborum dicta.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde quod neque error repellat. Consequuntur adipisci cumque quia pariatur, repellat inventore ipsam cum necessitatibus quos quis! Esse vero mollitia iure sit.</p>
-    </div>
-    <div id="BinhThuan">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aspernatur magnam, pariatur quia maiores tempore officia perferendis laudantium magni, inventore, tenetur suscipit sint veritatis asperiores voluptatum voluptas autem ea porro!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis pariatur tempore vero rerum consequuntur culpa explicabo facere doloremque saepe nulla quisquam corporis error fugit perspiciatis obcaecati voluptas autem, tempora non?</p>
-    </div>-->
-    <div id="HaLong">
-        <p>Ha Long Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, saepe non. Deleniti magnam ratione dolorum. Vero nisi unde placeat explicabo ex, vel debitis consequuntur voluptas molestias esse alias fugit reiciendis!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique velit illum sapiente voluptatum? Illum accusamus, laborum odit, culpa perspiciatis ea quis tenetur odio sequi esse pariatur adipisci, expedita sit voluptatibus!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, amet deleniti. Eaque, reprehenderit. Ullam ea voluptates asperiores. Amet dicta sequi possimus quibusdam. Illum quisquam vero minima. Velit nesciunt veritatis tempora!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni quia voluptate beatae, eligendi ex corrupti dolorum enim saepe fugit suscipit error minus. Sapiente, fugiat cum quas sequi dolorum ratione porro!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe vel non aspernatur consectetur minus fugit adipisci, labore ratione a. Expedita doloribus quos iusto a quas perferendis maiores molestiae fugiat nostrum.</p>
+    <div class="">
+        <div class="">
+            <img src="/img/review/thap-ba-ponagar-2-768x768.jpg" style="width: 100%;" alt="">
+        <h2 style="text-align: center; color: turquoise;">Tháp bà Ponaga</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestiae similique voluptate doloremque enim voluptatem, maiores nam? Praesentium, ratione! Voluptatum laboriosam laudantium in vero nisi fugit maxime sint iste aliquam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci sit ipsam impedit ad? Eos, repudiandae reiciendis. Tempora veritatis nobis dolorum consectetur molestias, veniam accusantium sit beatae, repellat facilis, fugiat blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente commodi debitis quaerat error nam distinctio in praesentium. Repellendus, pariatur. Voluptatibus autem libero modi ut. Vel mollitia ipsam quia quos molestiae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium maiores, accusamus consequatur quod tenetur animi quia totam nihil repellendus voluptatum alias quos cupiditate ut libero ab! Recusandae, dolorem laborum! Fugiat!</p>
+        <div class="content__date--cusreview"><p>November, 21, 2021</p> </div>
+        </div>
+        <h3>người đăng bài</h3>
+        <div class=" content--infor-cusreiew flexrow">
+
+            <div><img src="/img/user-img-1-100x100.png" alt=""></div>
+            <div> 
+                <p><b>Jenny</b></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, animi! Voluptates voluptatibus deleniti consequatur inventore distinctio! Molestias tempora</p>
+                <div class="footer-icon-contact" style="justify-content: left;">
+                    <a style="margin: 0px 5px;" href="">
+                        <i  class="fab fa-facebook footer-icon"></i>
+                    </a>
+                    <a style="margin: 0px 5px;" href="">
+                        <i  class="fab fa-instagram footer-icon"></i>
+                    <a style="margin: 0px 5px;" href="">
+                        <i class="fab fa-twitter footer-icon"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
