--- a/html/partner.html
+++ b/html/partner.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="page__partner flexrow page">
-        <div class="plane ">
+        <div>
             <div class="flexrow partners-logo">
                 <img src="/img/logo_partners/1.png" alt="">
                 <img src="/img/logo_partners/2.png" alt="">
