--- a/html/signin_email.html
+++ b/html/signin_email.html
@@ -46,7 +46,7 @@
                             <li><a href="/html/register_email.html">Tạo tài khoản</a></li>
                         </div>
                         <div>
-                            <li><a href="">Quên mật khẩu?</a></li>
+                            <li><a href="/html/forgotPassword.html">Quên mật khẩu?</a></li>
                         </div>
                     </ul>
                     <div class="form_row verify">
@@ -55,14 +55,20 @@
                     <p id="match">hoặc tiếp tục với</p>
                     <ul class="other_method">
                         <div>
-                            <li><a href="" id="gg">
-                                <img src="/img/Detail/GGLogo.png" alt=""><p>Google</p>
-                            </a></li>
+                            <li>
+                                <a href="" id="gg">
+                                    <img src="/img/Detail/GGLogo.png" alt="">
+                                    <p>Google</p>
+                                </a>
+                            </li>
                         </div>
                         <div>
-                            <li><a href="" id="fb">
-                                <img src="/img/Detail/FBLogo.png" alt=""><p>Facebook</p>
-                            </a></li>
+                            <li>
+                                <a href="" id="fb">
+                                    <img src="/img/Detail/FBLogo.png" alt="">
+                                    <p>Facebook</p>
+                                </a>
+                            </li>
                         </div>
                     </ul>
                 </form>
